--- a/css/less/calendar.less
+++ b/css/less/calendar.less
@@ -1,6 +1,18 @@
 
 
-div.popover.js-calendar {
+.js-calendar.js-calendar-inputs {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    .js-input {
+        border: 0 none transparent;
+        outline: none;
+        color: #555;
+    }
+}
+.popover.js-calendar {
     position: absolute;
     max-width: 650px;
     // color: #fffeff;
