--- a/css/calendar.css
+++ b/css/calendar.css
@@ -21,46 +21,49 @@
   max-width: 650px;
   font-size: 13px;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-/* line 23, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000323}}
-.popover.js-calendar .arrow {
-  left: 20px;
+  padding: 10px;
 }
 /* line 24, /var/www/calendar/css/less/calendar.less */
 @media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000324}}
+.popover.js-calendar .arrow {
+  left: 20px;
+}
+/* line 25, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000325}}
 .popover.js-calendar .title {
   font-size: 14px;
   font-weight: bold;
 }
-/* line 29, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000329}}
-.popover.js-calendar .glyphicon {
+/* line 30, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000330}}
+.popover.js-calendar .dir {
   cursor: pointer;
+  font-size: 28px;
+  line-height: 18px;
 }
-/* line 31, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000331}}
-.popover.js-calendar .glyphicon.prev {
+/* line 34, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000334}}
+.popover.js-calendar .dir.prev {
   float: left;
 }
-/* line 32, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000332}}
-.popover.js-calendar .glyphicon.next {
+/* line 35, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000335}}
+.popover.js-calendar .dir.next {
   float: right;
 }
-/* line 33, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000333}}
-.popover.js-calendar .glyphicon.disable {
+/* line 36, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000336}}
+.popover.js-calendar .dir.disable {
   cursor: auto;
   color: #999;
 }
-/* line 38, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000338}}
+/* line 41, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000341}}
 .popover.js-calendar .clearfix {
   clear: both;
 }
-/* line 41, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000341}}
+/* line 44, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000344}}
 .popover.js-calendar .day,
 .popover.js-calendar .month,
 .popover.js-calendar .year,
@@ -68,21 +71,23 @@
 .popover.js-calendar table th {
   text-align: center;
   cursor: pointer;
+  line-height: 18px;
 }
-/* line 49, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000349}}
+/* line 53, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000353}}
 .popover.js-calendar .suggestions {
   float: left;
   min-width: 150px;
+  margin-right: 10px;
 }
-/* line 52, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000352}}
+/* line 57, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000357}}
 .popover.js-calendar .suggestions .suggestions-list {
   list-style-type: none;
   padding: 0;
 }
-/* line 56, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000356}}
+/* line 61, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000361}}
 .popover.js-calendar .suggestions .suggestion {
   background-color: #428bca;
   border: 1px solid #357ebd;
@@ -90,51 +95,52 @@
   text-transform: capitalize;
   border-radius: 4px;
   text-align: left;
-}
-/* line 64, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000364}}
-.popover.js-calendar .suggestions .suggestion + .suggestion {
-  margin-top: 5px;
+  color: #eee;
 }
 /* line 70, /var/www/calendar/css/less/calendar.less */
 @media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000370}}
+.popover.js-calendar .suggestions .suggestion + .suggestion {
+  margin-top: 5px;
+}
+/* line 76, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000376}}
 .popover.js-calendar .calendar {
   float: left;
 }
-/* line 73, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000373}}
+/* line 79, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000379}}
 .popover.js-calendar .calendar table {
   font-size: 14px;
   border-collapse: separate;
   min-width: 150px;
   border-spacing: 3px;
 }
-/* line 80, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000380}}
+/* line 86, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000386}}
 .popover.js-calendar .calendar .year,
 .popover.js-calendar .calendar .month,
 .popover.js-calendar .calendar .day {
   border-radius: 3px;
   padding: 6px;
 }
-/* line 85, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000385}}
+/* line 91, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000391}}
 .popover.js-calendar .calendar .year.highlight,
 .popover.js-calendar .calendar .month.highlight,
 .popover.js-calendar .calendar .day.highlight {
   background-color: #39b3d7;
   color: #fffeff;
 }
-/* line 89, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000389}}
+/* line 95, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000395}}
 .popover.js-calendar .calendar .year:hover,
 .popover.js-calendar .calendar .month:hover,
 .popover.js-calendar .calendar .day:hover {
   background-color: #32add0;
   color: #fffeff;
 }
-/* line 93, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000393}}
+/* line 99, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000399}}
 .popover.js-calendar .calendar .year.disable,
 .popover.js-calendar .calendar .month.disable,
 .popover.js-calendar .calendar .day.disable {
@@ -142,8 +148,8 @@
   cursor: auto;
   background-color: transparent;
 }
-/* line 99, /var/www/calendar/css/less/calendar.less */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\0000399}}
+/* line 105, /var/www/calendar/css/less/calendar.less */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/var\/www\/calendar\/css\/less\/calendar\.less}line{font-family:\00003105}}
 .popover.js-calendar .calendar + .suggestions {
   margin-left: 20px;
   margin-right: 7px;
